--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         />
       </svg>
     </nav>
-    <main class="max-w-7xl bg-gray-100 mx-auto">
+    <main class="max-w-7xl mx-auto">
       <div
         class="
           hero
@@ -79,8 +79,7 @@
           mt-2
         "
       >
-        <div class="absolute top-1/2 w-full">
-          <div class="text-center text-white bg-gray-900">
+        <div class="absolute top-1/3 w-full text-center text-white">
             <h3 class="text-2xl font-normal mb-4">JOURNEYS</h3>
             <h1 class="text-5xl font-medium mb-4">
               Stories From Around The World
@@ -95,13 +94,12 @@
                 />
               </div>
             </div>
-          </div>
         </div>
       </div>
-      <div class="mt-4  sm:flex sm:space-x-6 px-4 sm:px-0">
+      <div class="mt-4 sm:flex sm:space-x-6 px-4 sm:px-0">
         <div
           class="
-            mb-4
+            mb-8
             sm:mb-0 sm:w-3/12
             flex flex-col
             justify-between
@@ -109,7 +107,8 @@
             font-medium
             bg-[url('/img/sedona.jpg')] bg-cover bg-center
             p-4
-            h-60 sm:h-72
+            h-60
+            sm:h-72
             rounded-lg
           "
         >
@@ -120,7 +119,7 @@
         </div>
         <div
           class="
-            mb-4
+            mb-8
             sm:mb-0 sm:w-6/12
             flex flex-col
             justify-between
@@ -128,7 +127,8 @@
             font-medium
             bg-gray-300 bg-[url('/img/tybee.jpg')] bg-cover bg-center
             p-4
-            h-60 sm:h-72
+            h-60
+            sm:h-72
             rounded-lg
           "
         >
@@ -140,14 +140,15 @@
         <div
           class="
             rounded-lg
-            mb-4
+            mb-8
             sm:mb-0 sm:w-3/12
             bg-blue-900
             p-4
             flex flex-col
             justify-between
             font-medium
-            h-44 sm:h-72
+            h-44
+            sm:h-72
           "
         >
           <p class="text-[#00CD92] text-3xl font-semibold">
@@ -158,9 +159,9 @@
           >
         </div>
       </div>
-      <div class="mt-4 sm:flex sm:space-x-4">
+      <div class="mt-4 sm:flex sm:space-x-6">
         <div class="mb-4 sm:mb-0 sm:w-9/12 sm:flex sm:flex-col space-y-4">
-          <div class="sm:flex sm:space-x-4 mb-4 space-x-1">
+          <div class="sm:flex sm:space-x-6 mb-4 space-x-1">
             <div
               class="
                 w-10/12
@@ -184,49 +185,89 @@
               />
             </div>
             <div class="image-content w-8/12 h-80 flex flex-col space-y-6">
-              <header class="text-5xl font-regular text-blue-900 bg-gray-300">
+              <header class="text-5xl font-regular text-blue-900">
                 The Best Beach Towns in florida You Need To Visit
               </header>
               <p class="text-gray-500">
                 Written by
                 <span class="underline text-blue-900">staff writer</span>
               </p>
-              <p class="text-gray-500">
+              <p class="text-gray-500 hidden sm:block">
                 Let's start with the big picture.Planning a trip top flotrrida?>
                 Here are the best branches wherer you shoulkd spn\end the week
                 (or the month) on the beach with your...
               </p>
             </div>
           </div>
-          <div class="sm:flex sm:space-x-4 mb-4 space-x-1">
-            <div class="image w-4/12 h-80 bg-blue-900"></div>
-            <div class="image-content w-8/12 h-80 bg-gray-300">
-              the best Sarosta Artea
+          <div class="sm:flex sm:space-x-6 mb-4 space-x-1">
+            <div
+              class="
+                w-10/12
+                mx-auto
+                sm:w-4/12
+                h-64
+                flex
+                items-center
+                justify-center
+                bg-blue-900
+                rounded-xl
+              "
+            >
+              <img
+                class="w-4/5"
+                loading="lazy"
+                src="/img/header_logo.svg"
+                alt="rentByOwner"
+                width="182"
+                height="26"
+              />
+            </div>
+            <div
+              class="image-content w-8/12 mx-auto h-80 flex flex-col space-y-6"
+            >
+              <header class="text-2xl sm:text-5xl font-regular text-blue-900">
+                The Best Sarasota Area Beaches To Explore
+              </header>
+              <p class="text-gray-500">
+                Written by
+                <span class="underline text-blue-900">staff writer</span>
+              </p>
+              <p class="text-gray-500 hidden sm:block">
+                Let's start with the big picture.Planning a trip top flotrrida?>
+                Here are the best branches wherer you shoulkd spn\end the week
+                (or the month) on the beach with your...
+              </p>
             </div>
           </div>
-          <div class="pagination flex space-x-3 font-medium text-sm">
+          <div
+            class="pagination flex space-x-3 font-medium text-sm px-4 sm:px-0"
+          >
             <div class="active border bg-blue-900 text-white px-3 py-1">1</div>
             <div class="border text-blue-900 px-3 py-1">2</div>
             <div class="border text-blue-900 px-3 py-1">...</div>
             <div class="border text-blue-900 px-3 py-1">38</div>
             <div class="border text-blue-900 px-2 py-1">LAST</div>
           </div>
-          <div class="typeeIs py-4 px-8 bg-blue-900 flex">
-            <div class="flex">
-              <i
-                class="fas fa-quote-left text-blue-400 h-10 w-10 scale-105"
-              ></i>
-              <header class="text-[#00CD92] text-4xl font-medium">
-                Tybee is replete with everythiong that you need to have the
-                perfect vacation.
-              </header>
+          <div class="typeeIs py-4 pr-4 pl-4 bg-blue-900 flex justify-between mx-4 sm:mx-0">
+            <div class="flex flex-col justify-between space-x-6 space-y-16">
+              <div class="flex p-4 ">
+                <i class="fas fa-quote-left text-blue-400 h-10 w-4 scale-105"></i>
+                <header class="text-[#00CD92] text-3xl sm:text-4xl font-medium">
+                  <!-- Tybee is replete with everythiong that you need to have the
+      perfect vacation. -->
+                  San Diego is a city that delivers a good time.
+                </header>
+              </div>
+              <a href="#" class="things_to_do text-[#00CD92] underline text-2xl p-4">
+                Things To Do in San Diego
+              </a>
             </div>
             <div class="flex flex-col justify-end">
-              <i class="fas fa-arrow-right"></i>
+              <i class="fas fa-arrow-right text-white text-4xl"></i>
             </div>
           </div>
         </div>
-        <div class="mb-4 sm:mb-0 sm:w-3/12 h-80 flex flex-col space-y-2">
+        <div class="mb-4 sm:mb-0 sm:w-3/12 h-80 flex flex-col space-y-3 pl-0 text-xl sm:pl-2 mx-5 sm:mx-0">
           <header class="font-light uppercase">catagories</header>
           <ul class="flex flex-col space-y-2">
             <li class="text-[#00CD92] flex justify-between">
@@ -246,7 +287,7 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Arizona</p>
               <span
                 class="
                   h-5
@@ -262,7 +303,7 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Beaches</p>
               <span
                 class="
                   h-5
@@ -278,7 +319,7 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>California</p>
               <span
                 class="
                   h-5
@@ -294,7 +335,7 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Florida</p>
               <span
                 class="
                   h-5
@@ -310,7 +351,7 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Georgia</p>
               <span
                 class="
                   h-5
@@ -326,7 +367,26 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Hawaii</p>
+              <span
+                class="
+                  h-5
+                  w-5
+                  border border-[#00CD92] border-2
+                  rounded-full
+                  flex
+                  items-center
+                  justify-center
+                "
+              >
+                <i class="fas fa-chevron-down"></i>
+              </span>
+            </li>
+            <li class="text-[#00CD92]">
+              <p>Hiking</p>
+            </li>
+            <li class="text-[#00CD92] flex justify-between">
+              <p>Maine</p>
               <span
                 class="
                   h-5
@@ -342,7 +402,7 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Maryland</p>
               <span
                 class="
                   h-5
@@ -358,7 +418,51 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Massachusetts</p>
+              <span
+                class="
+                  h-5
+                  w-5
+                  border border-[#00CD92] border-2
+                  rounded-full
+                  flex
+                  items-center
+                  justify-center
+                "
+              >
+                <i class="fas fa-chevron-down"></i>
+              </span>
+            </li>
+            <li class="text-[#00CD92]">
+              <p>Museums</p>
+            </li>
+            <li class="text-[#00CD92] flex justify-between">
+              <p>Oregon</p>
+              <span
+                class="
+                  h-5
+                  w-5
+                  border border-[#00CD92] border-2
+                  rounded-full
+                  flex
+                  items-center
+                  justify-center
+                "
+              >
+                <i class="fas fa-chevron-down"></i>
+              </span>
+            </li>
+            <li class="text-[#00CD92]">
+              <p>Parks</p>
+            </li>
+            <li class="text-[#00CD92]">
+              <p>Place To Stay</p>
+            </li>
+            <li class="text-[#00CD92]">
+              <p>Restaurants</p>
+            </li>
+            <li class="text-[#00CD92] flex justify-between">
+              <p>South Carolina</p>
               <span
                 class="
                   h-5
@@ -374,7 +478,7 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Tennessee</p>
               <span
                 class="
                   h-5
@@ -390,7 +494,7 @@
               </span>
             </li>
             <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
+              <p>Texas</p>
               <span
                 class="
                   h-5
@@ -405,190 +509,23 @@
                 <i class="fas fa-chevron-down"></i>
               </span>
             </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
+            <li class="text-[#00CD92]">
+              <p>Things To do</p>
             </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
+            <li class="text-[#00CD92]">
+              <p>Tours</p>
             </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
-            </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
-            </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
-            </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
-            </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
-            </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
-            </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
-            </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
-            </li>
-            <li class="text-[#00CD92] flex justify-between">
-              <p>Alabama</p>
-              <span
-                class="
-                  h-5
-                  w-5
-                  border border-[#00CD92] border-2
-                  rounded-full
-                  flex
-                  items-center
-                  justify-center
-                "
-              >
-                <i class="fas fa-chevron-down"></i>
-              </span>
+            <li class="text-[#00CD92]">
+              <p>Uncategorized</p>
             </li>
           </ul>
         </div>
       </div>
-      <div class="mt-12">
+      <div class="mt-12 px-4 sm:px-0">
         <header class="font-medium text-2xl text-gray-800">
           Follow The Adventures
         </header>
-        <div class="mt-4 grid grid-cols-4">
+        <div class="mt-6 grid grid-cols-1 sm:grid-cols-4 gap-0">
           <div
             class="
               mb-4
@@ -625,11 +562,11 @@
     </main>
     <footer class="bg-indigo-100 px-4 pt-6 mt-4">
       <div
-        class="content border flex space-x-96 bg-gray-300 w-7/12 mx-auto mb-2"
+        class="content border flex space-x-64 bg-gray-300 w-7/12 mx-auto mb-2"
       >
         <div class="find">
           <header class="font-semibold text-xl">Find a Place to Stay</header>
-          <ul class="grid grid-cols-2">
+          <ul class="grid grid-cols-2 gap-x-56">
             <li>All RBO Homes</li>
             <li>Vacation rentals</li>
             <li>Cabins</li>
@@ -668,7 +605,8 @@
           </div>
         </div>
       </div>
-      <div class="border border-t-1 border-gray-600"></div>
+      <!-- <div class="border border-t-1 border-gray-600"></div> -->
+      <div class="border-b border-gray-300 w-full"></div>
       <div class="flex justify-between pt-2 items-center text-lg text-gray-800">
         <div class="policy flex justify-between py-2 items-center space-x-64">
           <div class="icons flex space-x-1">
@@ -712,7 +650,7 @@
               <i class="fab fa-twitter text-white"></i>
             </div>
           </div>
-          <ul class="privacy_&_site flex space-x-3">
+          <ul class="privacy_&_site flex space-x-3 sm:pl-4">
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Site Terms</a></li>
           </ul>
