--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
           </div>
         </div>
-        <div class="mb-4 sm:mb-0 sm:w-3/12 h-80 flex flex-col space-y-3 pl-0 text-xl sm:pl-2 mx-5 sm:mx-0">
+        <div class="mb-4 sm:mb-0 sm:w-3/12 flex flex-col space-y-3 pl-0 text-xl sm:pl-2 mx-5 sm:mx-0">
           <header class="font-light uppercase">catagories</header>
           <ul class="flex flex-col space-y-2">
             <li class="text-[#00CD92] flex justify-between">
@@ -525,48 +525,44 @@
         <header class="font-medium text-2xl text-gray-800">
           Follow The Adventures
         </header>
-        <div class="mt-6 grid grid-cols-1 sm:grid-cols-4 gap-0">
+        <div class="mt-6 sm:flex">
           <div
-            class="
-              mb-4
-              h-80
+            class="sm:w-1/4
+              h-96 sm:h-80
               bg-gray-300 bg-[url('/img/india2.jpg')] bg-cover bg-center
             "
           ></div>
           <div
-            class="
-              mb-4
-              h-80
+            class="sm:w-1/4
+              h-96 sm:h-80
               bg-gray-300 bg-[url('/img/lioncity.jpg')] bg-cover bg-center
             "
           ></div>
           <div
-            class="
-              mb-4
-              h-80
+            class="sm:w-1/4
+              h-96 sm:h-80
               bg-gray-300 bg-[url('/img/indiagate.jpg')] bg-cover bg-center
             "
           ></div>
           <div
-            class="
-              mb-4
-              h-80
+            class="sm:w-1/4
+              h-96 sm:h-80
               bg-gray-300 bg-[url('/img/china1.jpg')] bg-cover bg-left
             "
           ></div>
         </div>
-        <div class="follow_us text-[#00CD92] text-lg text-right font-medium">
+        <div class="follow_us text-[#00CD92] my-8 text-lg text-center sm:text-right font-medium">
           FOLLOW US ON INSTAGRAM
         </div>
       </div>
     </main>
-    <footer class="bg-indigo-100 px-4 pt-6 mt-4">
+    <footer class="bg-indigo-100 px-4 pt-24 mt-4">
       <div
-        class="content border flex space-x-64 bg-gray-300 w-7/12 mx-auto mb-2"
+        class="content border sm:flex sm:space-x-64 sm:w-7/12 mx-auto mb-2"
       >
-        <div class="find">
-          <header class="font-semibold text-xl">Find a Place to Stay</header>
-          <ul class="grid grid-cols-2 gap-x-56">
+        <div class="find text-center sm:text-left flex flex-col sm:block space-y-3">
+          <header class="font-medium text-2xl">Find a Place to Stay</header>
+          <ul class="text-gray-600 font-regular grid grid-cols-1 text-xl sm:grid-cols-2 gap-x-56 gap-y-3">
             <li>All RBO Homes</li>
             <li>Vacation rentals</li>
             <li>Cabins</li>
