--- a/demo.html
+++ b/demo.html
@@ -16,23 +16,21 @@
   </head>
   <body>
     <div
-      class="
+      class=" 
         sm:flex sm:justify-between
         pt-2
         sm:items-center
         text-lg text-gray-800
       "
     >
-      <div class="flex space-x-64">
-        <div
-          class="
-            icons
+      <div class="flex flex-col sm:flex-row sm:space-x-64">
+        <div class="icons
             flex
             space-x-1
             my-10
             sm:my-0
-            justify-left
-            sm:justify-center
+            sm:justify-left
+            justify-center
           "
         >
           <div
@@ -75,17 +73,14 @@
             <i class="fab fa-twitter text-white"></i>
           </div>
         </div>
-        <ul
-          class="
-            privacy_&amp;_site
+        <ul class="privacy_n_site
             text-center
             flex
             text-xl
             justify-center
             space-x-5
             sm:pl-4
-          "
-        >
+          ">
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Site Terms</a></li>
         </ul>
