--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
 
       <div class="mt-4 sm:flex sm:space-x-6">
-        <div class="mb-4 sm:mb-0 sm:w-9/12 sm:flex sm:flex-col space-y-4">
+        <div class="mb-4 sm:mb-0 sm:w-9/12 sm:flex sm:flex-col space-y-16 sm:space-y-4">
           <div class="sm:flex sm:space-x-6 mb-4">
             <div
               class="
@@ -197,7 +197,7 @@
                   text-2xl
                   mt-4
                   sm:mt-0 sm:text-5xl
-                  font-regular
+                  font-medium
                   text-blue-900
                 "
               >
@@ -238,7 +238,7 @@
                   text-2xl
                   mt-4
                   sm:mt-0 sm:text-5xl
-                  font-regular
+                  font-medium
                   text-blue-900
                 "
               >
@@ -255,9 +255,7 @@
               </p>
             </div>
           </div>
-          <div
-            class="pagination flex space-x-3 font-medium text-sm px-4 sm:px-0"
-          >
+          <div class="pagination flex space-x-3 font-medium text-sm px-4 sm:px-0 mt-16">
             <div class="active border bg-blue-900 text-white px-3 py-1">1</div>
             <div class="border text-blue-900 px-3 py-1">2</div>
             <div class="border text-blue-900 px-3 py-1">...</div>
@@ -278,7 +276,7 @@
             "
           >
             <div class="flex flex-col justify-between space-x-6 space-y-16">
-              <div class="flex p-4">
+              <div class="flex p-1 sm:p-4">
                 <i
                   class="fas fa-quote-left text-blue-400 h-10 w-4 scale-105"
                 ></i>
@@ -290,7 +288,7 @@
               </div>
               <a
                 href="#"
-                class="things_to_do text-[#00CD92] underline text-2xl p-4"
+                class="things_to_do text-[#00CD92] underline text-2xl pb-2 sm:pb-0"
               >
                 Things To Do in San Diego
               </a>
@@ -302,7 +300,7 @@
         </div>
         <aside
           class="
-            mb-4
+            mb-4 mt-10 sm:mt-0
             sm:mb-0 sm:w-3/12
             flex flex-col
             space-y-3
@@ -567,7 +565,7 @@
         </aside>
       </div>
       <div class="mt-12 px-4 sm:px-0">
-        <header class="font-medium text-2xl text-gray-800">
+        <header class="font-medium text-xl sm:text-2xl text-gray-800">
           Follow The Adventures
         </header>
         <div class="mt-6 sm:flex">
@@ -647,7 +645,7 @@
               grid grid-cols-1
               text-xl
               sm:grid-cols-2
-              gap-x-56 gap-y-3
+              gap-x-44 gap-y-3
             "
           >
             <li>All RBO Homes</li>
